@startuml

!theme plain
scale 1.2

' Configuration pour améliorer la lisibilité et corriger l'export PNG
skinparam dpi 300
skinparam backgroundColor White
skinparam shadowing false
skinparam linetype ortho
skinparam minClassWidth 100
skinparam nodesep 80
skinparam ranksep 100

skinparam class {
    BackgroundColor White
    ArrowColor #1B2631
    BorderColor #1B2631
    BorderThickness 2
    AttributeFontColorhsl(210, 28.90%, 14.90%)
    AttributeFontSize 13
    FontSize 14
    FontColor #1B2631
    FontStyle bold
    HeaderFontSize 16
    HeaderFontStyle bold
}

skinparam arrow {
    FontSize 12
    FontColor #1B2631
    Thickness 3
}

' Couleurs différenciées par stéréotype
skinparam class {
    BackgroundColor<<Ressource>> #E8F8F5
    BackgroundColor<<Transport>> #FDF2E9
    BackgroundColor<<Gestion>> #EBF5FB
    BackgroundColor<<Equipement>> #F4ECF7
    BorderColor<<Ressource>> #16A085
    BorderColor<<Transport>> #D68910
    BorderColor<<Gestion>> #2E86C1
    BorderColor<<Equipement>> #8E44AD
}

' Layout dirigé de gauche à droite pour éviter les problèmes d'export
left to right direction

' Niveau 1 : Gestion
class Chantier <<Gestion>> {
    + id_client: String
    + localisation: String
    + latitude: Float
    + longitude: Float
    + nature_terrain: String
    + distanceAllerGoudron: Float
    + distanceAllerPiste: Float
    + temps_aller: Float
    --
    + calculer_temps_aller(): Float
}

class Commande <<Gestion>> {
    + id_commande: Integer
    + id_client: String
    + id_equipement: Integer
    + nature_service: String
    + type_vehicule: String
    + quantite_requise: Float
    + lieu_chargement: String
    + date_commande: DateTime
    + date_livraison: DateTime
    + statut: String
    --
    + est_en_retard(): Boolean
    + associer_tournee(): void
    + calculer_delai_livraison(): Float
}

' Niveau 2 : Ressources Transport
class Conducteur <<Ressource>> {
    + id_conducteur: String
    + nom: String
    + prenom: String
    + numero_telephone: String
    + categorie: String
    + disponibilite: Enum
    + commentaire_disponibilite: String
    --
    + total_parcouru(): Float
    + affecter_a_tournee(): void
}

class Vehicule <<Ressource>> {
    + immatriculation: String
    + numero_chassis: String
    + numero_interne: String
    + marque_modele: String
    + type_vehicule: String
    + capacite_tonne: Float
    + capacite_volume: Float
    + etat: Enum
    --
    + est_disponible(): Boolean
    + affecter_a_tournee(): Tournee
}

' Niveau 2 : Équipements
class Equipement <<Equipement>> {
    + ID_equipement: Integer
    + nomEquipement: String
    + typeEquipement: String
    + poids: Float
    + volume: Float
}

class CommandeEquipement <<Equipement>> {
    + id_commande: Integer
    + id_equipement: Integer
    + quantite: Integer
}

class TransfererEquipement <<Equipement>> {
    + id: Integer
    + volet: String
    + nom_equipement: String
    + id_equipement: Integer
    + modalite_transport: String
    + total_equipements: Integer
    + id_client: String
    + douze_semaines_avant: Integer
    + onze_semaines_avant: Integer
    + dix_semaines_avant: Integer
    + neuf_semaines_avant: Integer
    + huit_semaines_avant: Integer
    + sept_semaines_avant: Integer
    + six_semaines_avant: Integer
    + cinq_semaines_avant: Integer
    + quatre_semaines_avant: Integer
    + trois_semaines_avant: Integer
    + deux_semaines_avant: Integer
    + un_semaines_avant: Integer
    + zero_semaines_avant: Integer
    --
    + get_equipement(): Equipement
}

' Niveau 3 : Transport & Exécution
class Tournee <<Transport>> {
    + id_tournee: Integer
    + id_conducteur: String
    + immatriculation_vehicule: String
    + id_commande: Integer
    + objectif: String
    + lieu_depart: String
    + destination: String
    + itineraire: String
    + km_parcouru: Float
    + date_heure_prevu: DateTime
    + date_heure_debut: DateTime
    + date_heure_cloture: DateTime
    + date_heure_arrivee: DateTime
    + duree: String
    --
    + calculer_duree(): String
}

class EtapeRotation <<Transport>> {
    + id_etape: Integer
    + id_tournee: Integer
    + ordre_etape: Integer
    + type_etape: String
    + lieu: String
    + materiel_concerne: String
    + quantite: Integer
    + date_heure_prevue: DateTime
    + date_heure_reelle: DateTime
    + statut: String
    + commentaires: Text
    + created_at: DateTime
    + updated_at: DateTime
    --
    + __repr__(): String
}

class Affectation <<Gestion>> {
    + id_affectation: Integer
    + id_conducteur: String
    + immatriculation_vehicule: String
    + id_tournee: Integer
    + date_affectation: DateTime
}

' Placement spatial optimisé pour l'export PNG
Chantier -down- Commande

Conducteur -down- Vehicule

Equipement -right- CommandeEquipement
CommandeEquipement -down- TransfererEquipement

Tournee -right- EtapeRotation
EtapeRotation -down- Affectation

' Relations
Chantier ||--o{ Commande
Commande ||--o{ CommandeEquipement
Commande ||--o{ Tournee

Equipement ||--o{ CommandeEquipement
Equipement ||--o{ TransfererEquipement

Conducteur ||--o{ Tournee
Vehicule ||--o{ Tournee
Tournee ||--o{ EtapeRotation

Conducteur ||--o{ Affectation
Vehicule ||--o{ Affectation
Tournee ||--o{ Affectation

Chantier ||--o{ TransfererEquipement

@enduml